<resources>
    <string name="app_name">微北洋</string>
    <string name="toast_network_failed">无法连接到网络</string>
    <string name="empty_error">不能为空</string>

    <!-- Welcome Activity -->
    <string name="title_activity_welcome">微北洋</string>

    <!-- Main Activity -->
    <string name="title_activity_main">Main</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Login</string>
    <string name="hint_login_account">天外天账号</string>
    <string name="hint_login_password">天外天密码</string>


    <!-- Library Activity -->
    <string name="library_account">我的账户</string>
    <string name="library_search">查找书籍</string>

    <!--Schedule Activity-->
    <string name="schedule_transition">schedule_transition</string>

    <!-- LostFound Activity -->
    <string name="lost_something">丢了东西</string>
    <string name="found_something">捡了东西</string>
    <string name="title_activity_post_lost_found">个人中心</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news">校园新闻</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_flash_screen">FlashScreenActivity</string>
    <string name="login_btn_text">登录</string>
    <string name="account_settings">账号设置</string>
    <string name="give_advice">意见反馈</string>
    <string name="share_app">分享APP</string>
    <string name="check_update">检查更新</string>
    <string name="choose_tags">标签选择</string>
    <string name="gpa_query">GPA</string>
    <string name="library_query">图书馆</string>
    <string name="campus_news">校园新闻</string>
    <string name="campus_note">校园公告</string>
    <string name="jobs_info">就业资讯</string>
    <string name="calculate_introduction">计算说明</string>
    <string name="title_activity_notice">校园公告</string>
    <string name="gonggao">供稿：</string>
    <string name="shengao">审稿：</string>
    <string name="sheying">摄影：</string>
    <string name="laiyuan">来源：</string>
    <string name="yuedu">阅读：</string>
    <string name="news_comments">评论</string>
    <string name="comment_send">发送</string>
    <string name="hint_write_comment">写评论</string>
    <string name="zongjidian">总绩点</string>
    <string name="captcha">验证码</string>
    <string name="cancle">取消</string>
    <string name="submit">确定</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wendesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="schedule">课程表</string>
    <string name="logout">退出登录</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="login_later">稍后登录</string>
    <string name="bind">绑定</string>
    <string name="tjupasswd">办公网密码</string>
    <string name="tjunumber">办公网帐号</string>
    <string name="share">分享</string>
    <string name="app_name_en">WePeiYang</string>
    <string name="version">Version:&#160;</string>
    <string name="supportedby">Supported by Ji Chenyang and Li Qiyu</string>
    <string name="author">Author: Juntao Sun</string>
    <string name="poweredby">Powered by TWT Studio</string>
    <string name="about_app">应用信息</string>
    <string name="your_email">您的email</string>
    <string name="your_advice">您的意见</string>
    <string name="send">发送</string>
    <string name="update">更新</string>
    <string name="already_update">已更新：</string>
    <string name="refresh">刷新</string>
    <string name="unbind">办公网解绑</string>
    <string name="comment">评论</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="more">查看更多</string>
    <string name="bank_card">银行卡</string>
    <string name="id_card">饭卡&amp;身份证</string>
    <string name="key">钥匙</string>
    <string name="backpack">书包</string>
    <string name="computer_pag">电脑包</string>
    <string name="watch">手表&amp;饰品</string>
    <string name="udisk">U盘&amp;硬盘</string>
    <string name="cup">水杯</string>
    <string name="book">书</string>
    <string name="mobile_phone">手机</string>
    <string name="wallet">钱包</string>
    <string name="lab_function">实验功能</string>
    <string name="bus">公交签到</string>
    <string name="dating">约吧</string>
    <string name="party">党建</string>
    <string name="sign_party">报名</string>
    <string name="study_party">学习</string>
    <string name="inquiry_party">成绩查询</string>
    <string name="submit_party">递交</string>
    <string name="forum_party">论坛</string>
    <string name="answer_party">答题</string>
    <string name="notification_party">通知公告</string>
    <string name="appeal_party">申诉</string>
    <string name="bike">自行车</string>
    <string name="loading">加载中...</string>
    <string name="read">阅读</string>
</resources>
