<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_bg"
    android:padding="8dp">

    <ImageView
        android:layout_marginTop="138.33dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_login"/>

    <EditText
        android:background="@drawable/bg_login_edittext"
        android:id="@+id/et_login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:hint="@string/hint_login_account"
        android:padding="10dp"
        android:singleLine="true"
        android:textCursorDrawable="@android:color/holo_blue_light" />

    <EditText
        android:background="@drawable/bg_login_edittext"
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:hint="@string/hint_login_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textCursorDrawable="@android:color/holo_blue_light" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_login_btn"
        android:text="@string/login_btn_text"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</LinearLayout>
