<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_bg"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:src="@mipmap/ic_tju" />

        <EditText
            android:id="@+id/et_bind_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_login_edittext"
            android:hint="@string/tjunumber"
            android:padding="10dp"
            android:singleLine="true"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/et_bind_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_login_edittext"
            android:hint="@string/tjupasswd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/bt_bind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_bind_btn"
            android:text="@string/bind"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pb_bind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</FrameLayout>