<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/schedule_primary_color">

        <include layout="@layout/app_toolbar" />
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/schedule_primary_color" />

                <TextView
                    android:id="@+id/tv_schedule_term"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/schedule_primary_color"
                    android:textSize="24sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/schedule_primary_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/schedule_primary_color"
                    android:textSize="16sp" />

                <TextView
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/tv_monday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/monday"
                    android:textColor="@color/schedule_primary_color"
                    android:textSize="16sp" />

                <TextView
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/tv_tuesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tuesday"
                    android:textColor="@color/schedule_primary_color"
                    android:textSize="16sp" />

                <TextView
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/tv_wendesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wendesday"
                    android:textColor="@color/schedule_primary_color"
                    android:textSize="16sp" />

                <TextView
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/tv_thursday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/thursday"
                    android:textColor="@color/schedule_primary_color"
                    android:textSize="16sp" />

                <TextView
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/tv_friday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/friday"
                    android:textColor="@color/schedule_primary_color"
                    android:textSize="16sp" />

                <TextView
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/tv_saturday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/saturday"
                    android:textColor="@color/schedule_primary_color"
                    android:textSize="16sp" />

                <TextView
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/tv_sunday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sunday"
                    android:textColor="@color/schedule_primary_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
