<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_captcha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/et_captcha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/captcha"
        android:paddingBottom="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="8dp"
        android:singleLine="true"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_captcha_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/cancle"
                android:textSize="16sp" />

            <TextView
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/btn_captcha_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/submit"
                android:textColor="@color/gpa_primary_color"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
